--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "better-scroll": "^2.4.2",
     "core-js": "^3.8.3",
+    "fastclick": "^1.0.6",
     "vue": "^2.6.14",
+    "vue-lazyload": "^3.0.0-rc.2",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
@@ -17,6 +21,7 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "postcss-px-to-viewport": "^1.1.1",
     "vue-template-compiler": "^2.6.14"
   }
 }
